ffi/include/kawaiifi.h

typedef struct Interface Interface;
typedef struct Bss Bss;
typedef struct Ie Ie;
typedef struct FieldList FieldList;
typedef struct BssList BssList;
/**
 * FFI-safe equivalent of kawaiifi::Band.
 */
typedef enum Band {
  BAND_TWO_POINT_FOUR_GHZ,
  BAND_FIVE_GHZ,
  BAND_SIX_GHZ,
  BAND_UNKNOWN,
} Band;
/**
 * FFI-safe equivalent of kawaiifi::ChannelWidth.
 */
typedef enum ChannelWidth {
  CHANNEL_WIDTH_TWENTY_MHZ,
  CHANNEL_WIDTH_FORTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_PLUS_EIGHTY_MHZ,
  CHANNEL_WIDTH_ONE_SIXTY_MHZ,
  CHANNEL_WIDTH_THREE_HUNDRED_TWENTY_MHZ,
  CHANNEL_WIDTH_UNKNOWN,
} ChannelWidth;
/**
 * FFI-safe equivalent of kawaiifi::CapabilityInfo.
 */
typedef struct CapabilityInfo {
  bool ess;
  bool ibss;
  bool privacy;
  bool short_preamble;
  bool critical_update_flag;
  bool nontransmitted_bssids_critical_update_flag;
  bool spectrum_management;
  bool qos;
  bool short_slot_time;
  bool apsd;
  bool radio_measurement;
  bool epd;
} CapabilityInfo;
/**
 * Returns the number of BSSs in the list, or 0 if `list` is null.
 */
uintptr_t kawaiifi_bss_list_count(const struct BssList *list);
/**
 * Returns a borrowed pointer to the BSS at `index`, or null if out of bounds or `list` is null.
 * The pointer is valid for the lifetime of the list. Do NOT free it individually.
 */
const struct Bss *kawaiifi_bss_list_get(const struct BssList *list, uintptr_t index);
/**
 * Frees a BSS list returned by `kawaiifi_interface_cached_bss_list`. Does nothing if `list` is null.
 */
void kawaiifi_interface_bss_list_free(struct BssList *list);
/**
 * Returns a borrowed pointer to the BSS's 6-byte BSSID (MAC address), or null if `bss` is null.
 * The pointer is valid for the lifetime of the BSS. Do NOT free it.
 */
const uint8_t *kawaiifi_bss_bssid(const struct Bss *bss);
/**
 * Returns the SSID as a C string, or null if not present.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_bss_ssid(const struct Bss *bss);
/**
 * Returns the operating frequency of the BSS in MHz, or 0 if `bss` is null.
 */
uint32_t kawaiifi_bss_frequency_mhz(const struct Bss *bss);
/**
 * Returns the band the BSS operates on (2.4 GHz, 5 GHz, or 6 GHz), or `BAND_UNKNOWN` if `bss` is null.
 */
enum Band kawaiifi_bss_band(const struct Bss *bss);
/**
 * Returns the channel width of the BSS, or `CHANNEL_WIDTH_UNKNOWN` if `bss` is null.
 */
enum ChannelWidth kawaiifi_bss_channel_width(const struct Bss *bss);
/**
 * Returns the center frequency of the BSS in MHz, or 0 if `bss` is null.
 */
uint32_t kawaiifi_bss_center_frequency_mhz(const struct Bss *bss);
/**
 * Returns the channel number of the BSS, or 0 if `bss` is null.
 */
uint8_t kawaiifi_bss_channel_number(const struct Bss *bss);
/**
 * Returns the signal strength of the BSS in dBm, or 0 if `bss` is null.
 */
int32_t kawaiifi_bss_signal_dbm(const struct Bss *bss);
/**
 * Returns the beacon interval of the BSS in time units (TUs, 1 TU = 1024 µs), or 0 if `bss` is null.
 */
uint16_t kawaiifi_bss_beacon_interval_tu(const struct Bss *bss);
/**
 * Returns the beacon interval of the BSS in milliseconds, or 0.0 if `bss` is null.
 */
double kawaiifi_bss_beacon_interval_ms(const struct Bss *bss);
/**
 * Returns the 802.11 capability information flags for the BSS.
 */
struct CapabilityInfo kawaiifi_bss_capability_info(const struct Bss *bss);
/**
 * Returns the timing synchronization function (TSF) timer value of the BSS, or 0 if `bss` is null.
 */
uint64_t kawaiifi_bss_tsf(const struct Bss *bss);
/**
 * Writes the Unix timestamp (milliseconds) of when the BSS was last seen into `out`.
 * Returns false if the timestamp is unavailable or `bss` is null.
 */
bool kawaiifi_bss_last_seen_utc_ms(const struct Bss *bss, int64_t *out);
/**
 * Returns the security protocols as a bitmask (WEP=1, WPA=2, WPA2=4, WPA3=8).
 */
uint8_t kawaiifi_bss_security_protocols(const struct Bss *bss);
/**
 * Returns the Wi-Fi protocols as a bitmask (a=1, b=2, g=4, n=8, ac=16, ax=32, be=64).
 */
uint16_t kawaiifi_bss_wifi_protocols(const struct Bss *bss);
/**
 * Returns the maximum supported data rate of the BSS in Mbps, or 0.0 if `bss` is null.
 */
double kawaiifi_bss_max_rate_mbps(const struct Bss *bss);
/**
 * Returns the fraction of time the BSS's channel is busy, as a value from 0 to 255, where 255 represents 100%.
 */
bool kawaiifi_bss_channel_utilization(const struct Bss *bss,
                                      uint8_t *channel_utilization);
/**
 * Returns the number of devices associated with the BSS.
 */
bool kawaiifi_bss_station_count(const struct Bss *bss, uint16_t *station_count);
/**
 * Returns the number of information elements in the BSS, or 0 if `bss` is null.
 */
uintptr_t kawaiifi_bss_ie_count(const struct Bss *bss);
/**
 * Returns a borrowed pointer to the information element at `index`, or null if out of bounds or `bss` is null.
 * The pointer is valid for the lifetime of the BSS. Do NOT free it.
 */
const struct Ie *kawaiifi_bss_ie_get(const struct Bss *bss,
                                     uintptr_t index);
/**
 * Frees a string returned by any kawaiifi function.
 */
void kawaiifi_string_free(char *s);
/**
 * Frees a byte buffer returned by any kawaiifi function.
 */
void kawaiifi_bytes_free(uint8_t *ptr, uintptr_t count);
/**
 * Returns the number of fields in the list, or 0 if `list` is null.
 */
uintptr_t kawaiifi_field_list_count(const struct FieldList *list);
/**
 * Returns a borrowed pointer to the field at `index`, or null if out of bounds or `list` is null.
 * The pointer is valid for the lifetime of the list. Do NOT free it.
 */
const struct Field *kawaiifi_field_list_get(const struct FieldList *list, uintptr_t index);
/**
 * Frees a field list returned by `kawaiifi_ie_fields`. Does nothing if `list` is null.
 */
void kawaiifi_field_list_free(struct FieldList *list);
/**
 * Returns the field's title as a C string. The caller must free with `kawaiifi_string_free`.
 */
char *kawaiifi_field_title(const struct Field *field);
/**
 * Returns the field's value as a C string. The caller must free with `kawaiifi_string_free`.
 */
char *kawaiifi_field_value(const struct Field *field);
/**
 * Returns the IE's fields as an opaque FieldList. The caller must free with `kawaiifi_field_list_free`.
 * Returns null if the IE is null or has no fields.
 */
struct FieldList *kawaiifi_ie_fields(const struct Ie *ie);
/**
 * Returns the cached BSS list for the given interface, or null if `interface` is null or an error occurs.
 * The caller must free the returned list with `kawaiifi_interface_bss_list_free`.
 */
struct BssList *kawaiifi_interface_cached_bss_list(const struct Interface *interface);