ffi/include/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "kawaiifi";





        /// <summary>
        ///  Returns the number of BSSs in the list, or 0 if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_list_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_bss_list_count(BssList* list);

        /// <summary>
        ///  Returns a borrowed pointer to the BSS at `index`, or null if out of bounds or `list` is null.
        ///  The pointer is valid for the lifetime of the list. Do NOT free it individually.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_list_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Bss* kawaiifi_bss_list_get(BssList* list, nuint index);

        /// <summary>
        ///  Frees a BSS list returned by `kawaiifi_interface_cached_bss_list`. Does nothing if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_bss_list_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_interface_bss_list_free(BssList* list);

        /// <summary>
        ///  Returns a borrowed pointer to the BSS's 6-byte BSSID (MAC address), or null if `bss` is null.
        ///  The pointer is valid for the lifetime of the BSS. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_bssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_bss_bssid(Bss* bss);

        /// <summary>
        ///  Returns the SSID as a C string, or null if not present.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_ssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_bss_ssid(Bss* bss);

        /// <summary>
        ///  Returns the operating frequency of the BSS in MHz, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_frequency_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_bss_frequency_mhz(Bss* bss);

        /// <summary>
        ///  Returns the band the BSS operates on (2.4 GHz, 5 GHz, or 6 GHz), or `BAND_UNKNOWN` if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_band", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Band kawaiifi_bss_band(Bss* bss);

        /// <summary>
        ///  Returns the channel width of the BSS, or `CHANNEL_WIDTH_UNKNOWN` if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_channel_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ChannelWidth kawaiifi_bss_channel_width(Bss* bss);

        /// <summary>
        ///  Returns the center frequency of the BSS in MHz, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_center_frequency_mhz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint kawaiifi_bss_center_frequency_mhz(Bss* bss);

        /// <summary>
        ///  Returns the channel number of the BSS, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_channel_number", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte kawaiifi_bss_channel_number(Bss* bss);

        /// <summary>
        ///  Returns the signal strength of the BSS in dBm, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_signal_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int kawaiifi_bss_signal_dbm(Bss* bss);

        /// <summary>
        ///  Returns the beacon interval of the BSS in time units (TUs, 1 TU = 1024 µs), or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_beacon_interval_tu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ushort kawaiifi_bss_beacon_interval_tu(Bss* bss);

        /// <summary>
        ///  Returns the beacon interval of the BSS in milliseconds, or 0.0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_beacon_interval_ms", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double kawaiifi_bss_beacon_interval_ms(Bss* bss);

        /// <summary>
        ///  Returns the 802.11 capability information flags for the BSS.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_capability_info", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern CapabilityInfo kawaiifi_bss_capability_info(Bss* bss);

        /// <summary>
        ///  Returns the timing synchronization function (TSF) timer value of the BSS, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_tsf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong kawaiifi_bss_tsf(Bss* bss);

        /// <summary>
        ///  Writes the Unix timestamp (milliseconds) of when the BSS was last seen into `out`.
        ///  Returns false if the timestamp is unavailable or `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_last_seen_utc_ms", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_last_seen_utc_ms(Bss* bss, long* @out);

        /// <summary>
        ///  Returns the security protocols as a bitmask (WEP=1, WPA=2, WPA2=4, WPA3=8).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_security_protocols", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte kawaiifi_bss_security_protocols(Bss* bss);

        /// <summary>
        ///  Returns the Wi-Fi protocols as a bitmask (a=1, b=2, g=4, n=8, ac=16, ax=32, be=64).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_wifi_protocols", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ushort kawaiifi_bss_wifi_protocols(Bss* bss);

        /// <summary>
        ///  Returns the maximum supported data rate of the BSS in Mbps, or 0.0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_max_rate_mbps", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double kawaiifi_bss_max_rate_mbps(Bss* bss);

        /// <summary>
        ///  Returns the fraction of time the BSS's channel is busy, as a value from 0 to 255, where 255 represents 100%.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_channel_utilization", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_channel_utilization(Bss* bss, byte* channel_utilization);

        /// <summary>
        ///  Returns the number of devices associated with the BSS.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_station_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_bss_station_count(Bss* bss, ushort* station_count);

        /// <summary>
        ///  Returns the number of information elements in the BSS, or 0 if `bss` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_ie_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_bss_ie_count(Bss* bss);

        /// <summary>
        ///  Returns a borrowed pointer to the information element at `index`, or null if out of bounds or `bss` is null.
        ///  The pointer is valid for the lifetime of the BSS. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_ie_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Ie* kawaiifi_bss_ie_get(Bss* bss, nuint index);

        /// <summary>
        ///  Frees a string returned by any kawaiifi function.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_string_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_string_free(byte* s);

        /// <summary>
        ///  Frees a byte buffer returned by any kawaiifi function.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bytes_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_bytes_free(byte* ptr, nuint count);

        /// <summary>
        ///  Returns the number of fields in the list, or 0 if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_list_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_field_list_count(FieldList* list);

        /// <summary>
        ///  Returns a borrowed pointer to the field at `index`, or null if out of bounds or `list` is null.
        ///  The pointer is valid for the lifetime of the list. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_list_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Field* kawaiifi_field_list_get(FieldList* list, nuint index);

        /// <summary>
        ///  Frees a field list returned by `kawaiifi_ie_fields`. Does nothing if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_list_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_field_list_free(FieldList* list);

        /// <summary>
        ///  Returns the field's title as a C string. The caller must free with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_title", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_field_title(Field* field);

        /// <summary>
        ///  Returns the field's value as a C string. The caller must free with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_value", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_field_value(Field* field);
